--- a/test/fixtures/statistics.yml
+++ b/test/fixtures/statistics.yml
@@ -7,6 +7,9 @@ one:
   wins: 1
   losses: 1
   ties: 1
+  team: one
+  match: one
+  season: one
 
 two:
   games_played: 1
@@ -15,3 +18,6 @@ two:
   wins: 1
   losses: 1
   ties: 1
+  team: two
+  match: two
+  season: two
